--- a/.github/workflows/dev_terraform.yaml
+++ b/.github/workflows/dev_terraform.yaml
@@ -57,8 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform-init-plan
     if: github.ref == 'refs/heads/main'
-    environment:
-      name: dev
+    environment: develop
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
