--- a/.github/workflows/dev_terraform.yaml
+++ b/.github/workflows/dev_terraform.yaml
@@ -32,14 +32,14 @@ jobs:
           tenant-id: ${{ secrets.Azure_Tenant_ID }}
           subscription-id: ${{ secrets.Azure_Subscription_ID }}
 
-      - name: tarraform init
-        id: init
-        run: terraform init -input=false
-        working-directory: ./environments/dev
-
       - name: terraform fmt
         id: fmt
         run: terraform fmt -check -recursive
+        working-directory: ./environments/dev
+
+      - name: tarraform init
+        id: init
+        run: terraform init -input=false
         working-directory: ./environments/dev
 
       - name: terraform validate
@@ -81,5 +81,5 @@ jobs:
 
       - name: terraform apply
         id: apply
-        run: terraform apply -input=false -auto-approve tfplan
+        run: terraform apply -input=false -auto-approve
         working-directory: ./environments/dev
